# FMCRP

./: README.md
fmcrp-code/: Dockerfile.controller  pyproject.toml
fmcrp-code/deploy/: controller.yaml  function.yaml  namespace.yaml
fmcrp-code/examples/: metadata.json  request.json
fmcrp-code/function/: Dockerfile  app.py
fmcrp-code/scripts/: bootstrap.ps1  bootstrap.sh  cleanup.ps1  cleanup.sh  deploy.ps1  deploy.sh  e2e.ps1  e2e.sh
fmcrp-code/src/fmcrp/: __init__.py  assignment.py  config.py  controller.py  models.py  prediction.py  scheduler.py
fmcrp-code/tests/: test_method.py
